- Added payment info to order - Added new schema for add product service. Add product service now checks if added product payment methods exist on database. - Updated mongo object id serialization signature to comply with new version of marshmallow - Moved application entry point to app.py - Updated marshmallow version - Dockerfile and docker-compose (not working yet)
