# appserver/models/product.py
@@ -3,6 +3,7 @@ from marshmallow import Schema, fields, post_load, validates, ValidationError, v
 from appserver.utils.mongo import ObjectId
 from appserver.models.location import LocationSchema
 from appserver.models.question import QuestionSchema
+from appserver.models.payment_method import PaymentMethodSchema
 from appserver.models.base import BaseModel
 # pylint: disable=R0903,R0201
 
@@ -13,29 +14,40 @@ class Product(BaseModel):
         super().__init__()
         self.categories = []
         self.questions = []
+        self.payment_methods = []
         for key, value in kwargs.items():
             setattr(self, key, value)
-
-    # def add_question(self, question):
-    #     self.questions.append(question)
-    #
-    # def add_answer(self, answer):
-    #     ret = False
-    #     for question in self.questions:
-    #         if question.question_id == answer.question_id:
-    #             question.answers.append(answer)
-    #             ret = True
-    #             break
-    #     return ret
-    #
-    # def buy(self, quantity, buyer_id):
-    #     if quantity > self.units:
-    #         return None
 
 
 class ProductSchema(Schema):
     """Product marshmallow schema"""
     _id = ObjectId()
+    name = fields.Str()
+    description = fields.Str()
+    seller = fields.Str()
+    units = fields.Int()
+    price = fields.Float()
+    location = fields.Nested(LocationSchema)
+    categories = fields.List(fields.Str())
+    payment_methods = fields.List(fields.Nested(PaymentMethodSchema))
+    pictures = fields.List(fields.Url(), required=True)
+    published = fields.Str()
+    questions = fields.List(fields.Nested(QuestionSchema))
+
+    @validates('units')
+    def validate_units(self, value):
+        """Validates that product units are greater than zero"""
+        if value <= 0:
+            raise ValidationError("Product units must be greater than 0.")
+
+    @post_load
+    def make_user(self, data):
+        """Deserializes data into a Product object"""
+        return Product(**data)
+
+
+class AddProductSchema(Schema):
+    """Product marshmallow schema"""
     name = fields.Str(required=True, validate=validate.Length(
         min=1, error="Product name cannot be empty."))
     description = fields.Str(required=True, validate=validate.Length(
@@ -61,6 +73,12 @@ class ProductSchema(Schema):
         """Validates that product price is greater than zero"""
         if value <= 0:
             raise ValidationError("Product price must be greater than 0.")
+
+    @validates('payment_methods')
+    def validate_payment_methods(self, value):
+        """Validates that there is at least one payment method available on product"""
+        if not value:
+            raise ValidationError("Must add at least one payment method.")
 
     @post_load
     def make_user(self, data):
