# appserver/services/order_services.py
@@ -3,6 +3,7 @@ import bson
 from appserver.models.order import OrderSchema
 from appserver.data.product_mapper import ProductMapper
 from appserver.data.order_mapper import OrderMapper
+from appserver.data.payment_method_mapper import PaymentMethodMapper
 from appserver.services.exceptions import NotFoundError, NotEnoughUnitsError, ForbiddenError
 
 
@@ -20,6 +21,9 @@ class OrderServices:
             raise NotFoundError("Product not found.")
         if order.buyer == product.seller:
             raise ForbiddenError("User cannot buy his own products.")
+        cls._validate_product_payment_method(
+            order.payment_info.payment_method, product.payment_methods)
+        cls._validate_payment_info(order.payment_info)
         order.seller = product.seller
         order.total = product.price * order.units
         order.product_name = product.name
@@ -55,3 +59,32 @@ class OrderServices:
         for order in orders:
             purchases.append(cls.schema.dump(order))
         return purchases
+
+    @classmethod
+    def _validate_payment_info(cls, payment_info):
+        payment_method = PaymentMethodMapper.get_one({'name': payment_info.payment_method})
+        if payment_method is None:
+            raise ForbiddenError("Invalid payment method.")
+        if payment_method.type:
+            cls._validate_card_info(payment_info)
+
+    @classmethod
+    def _validate_card_info(cls, payment_info):
+        try:
+            is_valid_card = payment_info.cardholder_name \
+                         and payment_info.card_number \
+                         and payment_info.expiration_date \
+                         and payment_info.security_code
+        except AttributeError:
+            raise ForbiddenError("Missing payment info")
+        return is_valid_card
+
+    @classmethod
+    def _validate_product_payment_method(cls, payment_method, product_payment_methods):
+        found = False
+        for product_payment_method in product_payment_methods:
+            if payment_method == product_payment_method.name:
+                found = True
+                break
+        if not found:
+            raise ForbiddenError("Invalid payment method.")
