# appserver/services/product_services.py
@@ -5,8 +5,10 @@ from appserver.models.product import ProductSchema
 from appserver.models.question import QuestionSchema
 from appserver.models.answer import AnswerSchema
 from appserver.models.category import CategorySchema
+from appserver.models.product import AddProductSchema
 from appserver.data.product_mapper import ProductMapper
 from appserver.data.category_mapper import CategoryMapper
+from appserver.data.payment_method_mapper import PaymentMethodMapper
 from appserver.services.exceptions import NotFoundError, ForbiddenError, DataExistsError
 from appserver.models.query import ProductsQuerySchema
 
@@ -19,7 +21,15 @@ class ProductsService:
     def add_product(cls, product_json, uid):
         """Add product services:"""
         product_json['seller'] = uid
-        product = cls.schema.load(product_json)
+        add_product_schema = AddProductSchema()
+        product = add_product_schema.load(product_json)
+        aux = []
+        for payment_method_name in product.payment_methods:
+            payment_method = PaymentMethodMapper.get_one({'name': payment_method_name})
+            if payment_method is None:
+                raise NotFoundError(payment_method_name + " payment method is not available.")
+            aux.append(payment_method)
+        product.payment_methods = aux
         product.published = str(datetime.now())
         return ProductMapper.insert(product)
 
